--- a/librarymanagementproject.client/src/app/pages/auth/login-page/login-page.component.html
+++ b/librarymanagementproject.client/src/app/pages/auth/login-page/login-page.component.html
@@ -1,5 +1,5 @@
 
-<div class="container-fluid" style="display: flex; flex-direction: row;">
+<div class="container-fluid" style="">
   <div class="col-md-5 hidden-sm hidden-xs full-height colored-side">
     <div >
       <h2 class="slogan">
