--- a/librarymanagementproject.client/src/app/pages/new-book/new-book.component.html
+++ b/librarymanagementproject.client/src/app/pages/new-book/new-book.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="projectForm" class="margin-size" novalidate>
+<!-- <form [formGroup]="projectForm" class="margin-size" novalidate>
 
     <div [@error]='error=="title"' class="floating-card">
       <label id="title" class="required-star field-label">Book title </label>
@@ -20,8 +20,8 @@
         </div>  
     </div>
     <div [@error]='error=="description"' class="floating-card" >
-      <!-- ADDED REQUIRED-STAR -->
-      <label id="description" class="field-label">Book description</label>
+       ADDED REQUIRED-STAR -->
+      <!-- <label id="description" class="field-label">Book description</label>
       <div class="row">
         <input formControlName="description" placeholder="description" type = "text">
       </div>
@@ -38,4 +38,4 @@
     </div>
   
 </form>
-  <div  class="center"><button (click)="addBook()" class="btn-primary-color">Add the Book +</button></div>
+  <div  class="center"><button (click)="addBook()" class="btn-primary-color">Add the Book +</button></div> --> -->
