--- a/librarymanagementproject.client/src/app/sheared-components/header/header.component.scss
+++ b/librarymanagementproject.client/src/app/sheared-components/header/header.component.scss
@@ -1,6 +1,6 @@
 
-nav{
-
+.container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+  margin-left: 48px !important;
 }
 .justify-content-center {
   justify-content: center!important;
