--- a/librarymanagementproject.client/src/app/pages/books-list/books-list.component.scss
+++ b/librarymanagementproject.client/src/app/pages/books-list/books-list.component.scss
@@ -118,6 +118,7 @@
     padding: 0px;
     border-radius: 4px 4px 0px 0px;
     box-shadow: 0 0 51px 0 rgba(0,0,0,.08), 0 6px 18px 0 rgba(0,0,0,.05);
+    height: 447px;
     h1{
       font-weight: 700;
       font-size: 22px;
@@ -146,7 +147,7 @@
   .espace {
     margin-top: 15px;
     position: relative;
-    margin-left: 30px;
+    width: 25%;
   }
   .plus {
     width: 100%;
@@ -182,19 +183,21 @@
   .btn-primary-border, .availability-btn {
     text-align: center;
     cursor: pointer;
+    justify-content: center;
     line-height: 14px;
     height: 35px;
     width: 96px;
     padding: 0px 15px;
-    background: white;
-    display: block;
+    background: #D14031;
+    display: flex;
     border-radius: 5px;
-    color: #6a696a !important;
+    color: white !important;
     -webkit-transition-duration: 0.1s;
     -webkit-transition-timing-function: linear;
-    box-shadow: 0px 0 0 #5c5b5d inset;
-    border: 1px solid #5c5b5d;
+    box-shadow: 0px 0 0 #D14031 inset;
+    border: 1px solid #D14031;
     margin-top: 10px;
+    line-height: 28px;
 
   }
   .image-container{
