--- a/librarymanagementproject.client/src/app/pages/library-page/library-page.component.scss
+++ b/librarymanagementproject.client/src/app/pages/library-page/library-page.component.scss
@@ -1,19 +1,81 @@
 .container-fluid{
-    text-align: center; 
+    text-align: center;
     display: flex;
+    position: absolute;
     flex-direction: row;
-    margin-left: 4em;
+    background: #D14031;
+    padding: 5px;
+    top: 73px;
     .justify-content-center{
-        width: 50%; 
-        margin-top: 30px;
+        width: 50%;
+        margin-left: 28em;
+        margin-right: 2em;
         .btn{
             border: 1px solid rgb(114, 114, 114);
+            background: black;
         }
     }
     .filter-dropdow{
-        margin-top: 30px;
+        display: flex;
+        flex-direction: row;
         margin-left: 40px;
+        width: 50%;
+        text-align: center;
+        align-items: center;
+        .category-label{
+            font-size: 14px;
+            color: white;
+            width: 73%;
+            margin-right: 5px;
+
+        }
+        img{
+            width: 20px;
+            height: 20px;
+        }
+
         
     }
+    // dropdown.component.scss
+
+.filter-dropdow {
+    position: relative;
+  
+    button {
+      background-color: #3498db;
+      color: #fff;
+      padding: 10px;
+      cursor: pointer;
+    }
+  
+    .dropdown-content {
+        display: block;
+        position: absolute;
+        background-color: #f9f9f9;
+        box-shadow: 0 8px 16px rgba(255, 36, 36, 0.2);
+        z-index: 13;
+        left: 9px;
+        top: 43px;
+        width: 143px;
+  
+      a {
+        color: black;
+        padding: 12px 16px;
+        display: block;
+        text-decoration: none;
+  
+        &:hover {
+          background-color: #ddd;
+        }
+      }
+    }
+  
+    &.show {
+      .dropdown-content {
+        display: block;
+      }
+    }
+  }
+  
 
 }
