--- a/librarymanagementproject.client/src/app/sheared-components/header/header.component.html
+++ b/librarymanagementproject.client/src/app/sheared-components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light" style="background: -o-linear-gradient();">
+<nav class="navbar navbar-expand-lg navbar-light bg-light" style="width: 100%; z-index: 12; background: white !important; font-family: serif; position: fixed;    height: 74px;">
 	<div class="container-fluid">
 	  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
@@ -7,9 +7,12 @@
 		<a class="navbar-brand" [routerLink]="['/library/library-page']">
 			<strong>E-library</strong>
 		</a>
-		<ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+		<ul class="navbar-nav me-auto mb-2 mb-lg-0 " style="    margin-left: 201px;">
 		  <li class="nav-item">
-			<a class="nav-link active" aria-current="page" [routerLink]="['/library/library-page']">Explore</a>
+			<a class="nav-link active" aria-current="page" [routerLink]="['/library/library-page']">Home</a>
+		  </li>
+		  <li class="nav-item">
+			<a class="nav-link active" aria-current="page" [routerLink]="['/library/library-page']">Contact</a>
 		  </li>
 		  <li class="nav-item to-lef-side">
 			<a class="nav-link" [routerLink]="['/auth/login']">Sign In</a>
@@ -18,7 +21,6 @@
 			<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Log out</a>
 		  </li>
 		</ul>
-
 	  </div>
 	</div>
   </nav>
